--- a/src/app/components/game-user-answer/game-user-answer.component.html
+++ b/src/app/components/game-user-answer/game-user-answer.component.html
@@ -1,8 +1,8 @@
-<form *ngIf="form" [formGroup]="form" (ngSubmit)="answered()">
+<form *ngIf="form" [formGroup]="form" (ngSubmit)="submitAnswer()">
 
   <ion-grid>
     <ion-row>
-      <ion-col size="2">
+      <ion-col size="5">
         <ion-item>
           <ion-label position="floating">Le compte est :</ion-label>
           <ion-input type="number" formControlName="answer"></ion-input>
