--- a/src/app/pages/game/game.page.html
+++ b/src/app/pages/game/game.page.html
@@ -10,8 +10,6 @@
 
 <ion-content>
     <app-game-sequence *ngIf="!sequenceIsOver" [number$]="number$" [timePrinted]="game.config.timePrinted"></app-game-sequence>
-    <app-game-user-answer *ngIf="sequenceIsOver && !userAnswerMessage" [answer]="game.getAnswer()" (userIsCorrect)="answered($event)"></app-game-user-answer>
-    <div *ngIf="userAnswerMessage" class="ion-margin">
-        {{userAnswerMessage}}
-    </div>
+    <app-game-user-answer (answered)="userIsCorrect = $event" *ngIf="sequenceIsOver && userIsCorrect === null" [answer]="game.getAnswer()"></app-game-user-answer>
+    <app-after-game-options (nextGame)="nextGame()" (restart)="restart()" *ngIf="sequenceIsOver && userIsCorrect !== null" [game]="game" [userIsCorrect]="userIsCorrect"></app-after-game-options>
 </ion-content>
