--- a/src/app/pages/game/game.page.html
+++ b/src/app/pages/game/game.page.html
@@ -3,7 +3,7 @@
         <ion-buttons slot="start">
             <ion-menu-button *ngIf="!backButton"></ion-menu-button>
         </ion-buttons>
-        <ion-title>Jeu</ion-title>
+        <ion-title>Jeu - Niveau {{currentLevel}}</ion-title>
         <ion-back-button #backButton slot="start"></ion-back-button>
     </ion-toolbar>
 </ion-header>
