--- a/src/app/components/game-user-answer/game-user-answer.component.html
+++ b/src/app/components/game-user-answer/game-user-answer.component.html
@@ -1,18 +1,19 @@
 <form *ngIf="form" [formGroup]="form" (ngSubmit)="submitAnswer()">
-
-  <ion-grid>
-    <ion-row>
-      <ion-col size="5">
-        <ion-item>
-          <ion-label position="floating">Le compte est :</ion-label>
-          <ion-input type="number" formControlName="answer"></ion-input>
-        </ion-item>
-      </ion-col>
-      <ion-col size="2">
-        <ion-button type="submit" [disabled]="!form.valid">
-          C'est mon dernier mot
-        </ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+    <ion-grid>
+        <ion-row class="ion-justify-content-center">
+            <ion-col size="12">
+                <ion-item>
+                    <ion-label position="floating">Le compte est :</ion-label>
+                    <ion-input type="number" formControlName="answer"></ion-input>
+                </ion-item>
+            </ion-col>
+        </ion-row>
+        <ion-row class="ion-justify-content-center">
+            <ion-col size="12" class="ion-text-center">
+                <ion-button type="submit" [disabled]="!form.valid">
+                    C'est mon dernier mot
+                </ion-button>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 </form>
