--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,10 +1,9 @@
 <ion-header>
     <ion-toolbar>
         <ion-buttons slot="start">
-            <ion-menu-button *ngIf="!backButton"></ion-menu-button>
+            <ion-menu-button></ion-menu-button>
         </ion-buttons>
         <ion-title>Comment jouer ?</ion-title>
-        <ion-back-button #backButton slot="start"></ion-back-button>
     </ion-toolbar>
 </ion-header>
 
