change settings variation functions

--- a/src/app/pages/game/pre-game/pre-game.component.html
+++ b/src/app/pages/game/pre-game/pre-game.component.html
@@ -2,7 +2,7 @@
     <p>
         Au niveau <strong>{{game.getLevel()}}</strong>
         il va y avoir <strong>{{game.getConfig().serieSize}}</strong> nombres
-        entres <strong>0</strong> et <strong>{{game.getConfig().range}}</strong>
+        entres <strong>{{-1 * game.getConfig().range}}</strong> et <strong>{{game.getConfig().range}}</strong>
         qui vont chacuns rester affichés <strong>{{game.getConfig().timePrinted}}</strong> millisecondes.
     </p>
     <p>Bonne chance !</p>
