--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -20,9 +20,9 @@
         <li>Le temps que le nombre reste affiché;</li>
     </ul>
     <p>Au niveau <strong>1</strong>, les paramètres seront :
-        <strong>3</strong> nombres
-        entre <strong>-5</strong> et <strong>5</strong>
-        qui resteront affichés <strong>1.5</strong> secondes.
+        <strong>{{defaultConfig.serieSize}}</strong> nombres
+        entre <strong>{{-1 * defaultConfig.range}}</strong> et <strong>{{defaultConfig.range}}</strong>
+        qui resteront affichés <strong>{{defaultConfig.timePrinted}}</strong> millisecondes.
     </p>
     <p>Bonne chance !</p>
 
