--- a/src/app/pages/game/pre-game/pre-game.component.html
+++ b/src/app/pages/game/pre-game/pre-game.component.html
@@ -1,10 +1,10 @@
 <div class="ion-padding">
-    <p>
-        Au niveau <strong>{{game.getLevel()}}</strong>
-        il va y avoir <strong>{{game.getConfig().serieSize}}</strong> nombres
-        entres <strong>{{-1 * game.getConfig().range}}</strong> et <strong>{{game.getConfig().range}}</strong>
-        qui vont chacuns rester affichés <strong>{{game.getConfig().timePrinted}}</strong> millisecondes.
-    </p>
+    <p>Au niveau <strong>{{game.level}}</strong> :</p>
+    <ul>
+        <li><strong>{{game.config.serieSize}}</strong> nombres</li>
+        <li>entres <strong>{{-1 * game.config.range}}</strong> et <strong>{{game.config.range}}</strong></li>
+        <li>affichés pendant <strong>{{game.config.timePrinted}}</strong> millisecondes</li>
+    </ul>
     <p>Bonne chance !</p>
     <ion-button (click)="startPlaying()">Je suis pret</ion-button>
 </div>
