--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -9,15 +9,14 @@
 
 <ion-content class="ion-padding">
     <h2>Calculis</h2>
-    <p>Des nombres vons s'afficher (0, +2, -3, ...)</p>
+    <p>Des nombres vont s'afficher (0, +2, -3, ...)</p>
     <h3>Un peu de calcul mental</h3>
     <p>Faites la somme des nombres qui s'affichent, et donnez le bon compte à la fin.</p>
-    <p>Si le compte est bon, on recommence, mais avec un peu plus de difficulté.</p>
-    <p>Les paramètres qui varient sont :</p>
+    <p>Si le compte est bon, on recommence, mais avec un peu plus de difficulté :</p>
     <ul>
-        <li>Le nombre de nombres dans le niveau;</li>
-        <li>L'intervalle dans lequel est choisi</li>
-        <li>Le temps que le nombre reste affiché;</li>
+        <li>Plus de nombres</li>
+        <li>Plus grands</li>
+        <li>Plus vite</li>
     </ul>
     <p>Au niveau <strong>1</strong>, les paramètres seront :
         <strong>{{defaultConfig.serieSize}}</strong> nombres
