augment font size

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -9,12 +9,12 @@
 
 <ion-content class="ion-padding">
     <h2>Calculis</h2>
-    <p>Des nombres vont s'afficher (0, +2, -3, ...)</p>
+    <p>Des chiffres vont s'afficher (0, +2, -3, ...)</p>
     <h3>Un peu de calcul mental</h3>
-    <p>Faites la somme des nombres qui s'affichent, et donnez le bon compte à la fin.</p>
+    <p>Faites la somme des chiffres qui s'affichent, et donnez le bon compte à la fin.</p>
     <p>Si le compte est bon, on recommence, mais avec un peu plus de difficulté :</p>
     <ul>
-        <li>Plus de nombres</li>
+        <li>Plus de chiffres</li>
         <li>Plus grands</li>
         <li>Plus vite</li>
     </ul>
