--- a/src/app/pages/game/pre-game/pre-game.component.html
+++ b/src/app/pages/game/pre-game/pre-game.component.html
@@ -1,7 +1,7 @@
 <div class="ion-padding">
     <p>Au niveau <strong>{{game.level}}</strong> :</p>
     <ul>
-        <li><strong>{{game.config.serieSize}}</strong> nombres</li>
+        <li><strong>{{game.config.serieSize}}</strong> chiffres</li>
         <li>entres <strong>{{-1 * game.config.range}}</strong> et <strong>{{game.config.range}}</strong></li>
         <li>affichés pendant <strong>{{game.config.timePrinted}}</strong> millisecondes</li>
     </ul>
