--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -18,6 +18,8 @@
         <li>Plus grands</li>
         <li>Plus vite</li>
     </ul>
+    <p>Si vous quittez en cours de partie, c'est perdu !</p>
+    <br/>
     <p>Au niveau <strong>1</strong>, les paramètres seront :
         <strong>{{defaultConfig.serieSize}}</strong> nombres
         entre <strong>{{-1 * defaultConfig.range}}</strong> et <strong>{{defaultConfig.range}}</strong>
