add score selection + fix score not saved if first time

--- a/src/app/pages/game/pre-game/pre-game.component.html
+++ b/src/app/pages/game/pre-game/pre-game.component.html
@@ -1,5 +1,5 @@
 <div class="ion-padding">
-    <p>Au niveau <strong>{{game.level}}</strong> :</p>
+    <p>Au niveau <strong>{{game.level}}</strong> en difficulté <strong>{{game.difficulty}}</strong> :</p>
     <ul>
         <li><strong>{{game.config.serieSize}}</strong> chiffres</li>
         <li>entres <strong>{{-1 * game.config.range}}</strong> et <strong>{{game.config.range}}</strong></li>
