--- a/src/app/pages/game/game-user-answer/game-user-answer.component.html
+++ b/src/app/pages/game/game-user-answer/game-user-answer.component.html
@@ -4,7 +4,7 @@
             <ion-col size="12">
                 <ion-item>
                     <ion-label position="floating">Le compte est :</ion-label>
-                    <ion-input #answerInput type="number" formControlName="answer"></ion-input>
+                    <ion-input #answerInput type="text" formControlName="answer"></ion-input>
                 </ion-item>
             </ion-col>
         </ion-row>
