--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,9 @@
     <li><a routerLink="/home">Home</a></li>
     <li><a routerLink="/account">Account</a></li>
     <li><a routerLink="/games">Games</a></li>
+
+    <button (click)="login()">Google auth</button>
   </ul>
 </nav>
 
-<router-outlet />
+<router-outlet/>
