--- a/src/app/pages/page-home/page-home.component.html
+++ b/src/app/pages/page-home/page-home.component.html
@@ -1,1 +1,23 @@
-<p>page-home works!</p>
+<mat-toolbar>
+    <span>
+        Comment jouer ?
+    </span>
+</mat-toolbar>
+
+<div>
+
+    <h2>Calculis</h2>
+    <p>Des chiffres vont s'afficher (0, +2, -3, ...)</p>
+    <h3>Un peu de calcul mental</h3>
+    <p>Faites la somme des chiffres qui s'affichent, et donnez le bon compte à la fin.</p>
+    <p>Si le compte est bon, on recommence, mais avec un peu plus de difficulté :</p>
+    <ul>
+        <li>Plus de chiffres</li>
+        <li>Plus grands</li>
+        <li>Plus vite</li>
+    </ul>
+    <p>Vous pouvez revenir à l'écran d'accueil ou quitter l'application, votre progression est sauvegardée.<br />
+        Mais ne quittez pas en cours de partie, sinon c'est perdu !</p>
+    <p>Bonne chance !</p>
+
+</div>
