--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <mat-toolbar>
       <span>Menu</span>
       <span class="spacer"></span>
-      <button mat-button *ngIf="!!connected()" title="Déconnexion" (click)="logout()">
+      <button mat-button *ngIf="connected()" title="Déconnexion" (click)="logout()">
         <mat-icon>logout</mat-icon>
         Déconnexion
       </button>
@@ -19,8 +19,8 @@
     <mat-list>
       <mat-list-item *ngFor="let item of menuItems">
         <a mat-button routerLink="{{item.link}}" routerLinkActive="active" ariaCurrentWhenActive="page">
-          <mat-icon matListItemIcon>{{item.icon}}</mat-icon>
-          {{item.label}}
+          <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
+          {{ item.label }}
         </a>
       </mat-list-item>
     </mat-list>
@@ -28,7 +28,7 @@
   </mat-sidenav>
 
   <mat-sidenav-content>
-    <router-outlet />
+    <router-outlet/>
   </mat-sidenav-content>
 
 </mat-sidenav-container>
