add find opponent button on home page

--- a/src/app/pages/page-home/page-home.component.html
+++ b/src/app/pages/page-home/page-home.component.html
@@ -20,4 +20,5 @@
         Mais ne quittez pas en cours de partie, sinon c'est perdu !</p>
     <p>Bonne chance !</p>
 
+    <button mat-raised-button *ngIf="connected()" (click)="waitForOpponent()">Chercher un adversaire</button>
 </div>
