--- a/src/app/pages/page-games/game-details/game-details.component.html
+++ b/src/app/pages/page-games/game-details/game-details.component.html
@@ -1,29 +1,32 @@
-<div>
-  To skip level
-  <app-level-end
-    [gameId]="game().gameId"
-    [currentLevelId]="game().currentLevelId"
-  />
-</div>
+<div class="game-detail-container">
 
-<p>game  {{ game() | json }}</p>
-<p>game level {{ gameLevel() | json }}</p>
-<div>Current game state {{ gameState() }}</div>
+  <div>
+    <div>
+      Level : {{ this.game().currentLevelId }}
+    </div>
 
-<div>
-  <div *ngIf="gameState() === gameStateType.READY">
-    <button (click)="startLevel()">Start</button>
+    <div *ngIf="gameState() === gameStateType.READY">
+      <button (click)="updateGameState(gameStateType.IN_PROGRESS)">Start</button>
+    </div>
+    <div *ngIf="gameState() === gameStateType.IN_PROGRESS">
+      <app-level-start
+        [numbers]="currentLevel().numbers.numbers"
+        (endDisplay)="updateGameState(gameStateType.END)"
+      />
+    </div>
+    <div *ngIf="gameState() === gameStateType.END">
+      <app-level-end
+        [gameId]="game().gameId"
+        [currentLevelId]="game().currentLevelId"
+      />
+    </div>
   </div>
-  <div *ngIf="gameState() === gameStateType.IN_PROGRESS">
-    <app-level-start
-      [numbers]="gameLevel().numbers.Numbers"
-    />
-  </div>
-  <div *ngIf="gameState() === gameStateType.END">
-    <app-level-end
-      [gameId]="game().gameId"
-      [currentLevelId]="game().currentLevelId"
-    />
+
+  <div>
+    DEBUG
+    <p>game  {{ game() | json }}</p>
+    <p>game level {{ currentLevel() | json }}</p>
+    <p>Current game state {{ gameState() }}</p>
   </div>
 
 </div>
