--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,46 @@
-<mat-sidenav-container class="main-container">
+<div class="main-container">
 
-  <mat-sidenav mode="side" opened>
+  @if (!isMobile()) {
+    <mat-sidenav-container>
+      <mat-sidenav mode="side" opened>
+        <mat-toolbar>
+          <span>Menu</span>
+          <span class="spacer"></span>
+          <button mat-button *ngIf="connected()" title="Déconnexion" (click)="logout()">
+            <mat-icon>logout</mat-icon>
+            Déconnexion
+          </button>
+          <button mat-button *ngIf="!connected()" title="Connexion Google" (click)="login()">
+            <mat-icon>login</mat-icon>
+            Connexion
+          </button>
 
-    <mat-toolbar>
-      <span>Menu</span>
-      <span class="spacer"></span>
-      <button mat-button *ngIf="connected()" title="Déconnexion" (click)="logout()">
-        <mat-icon>logout</mat-icon>
-        Déconnexion
-      </button>
-      <button mat-button *ngIf="!connected()" title="Connexion Google" (click)="login()">
-        <mat-icon>login</mat-icon>
-        Connexion
-      </button>
+        </mat-toolbar>
 
-    </mat-toolbar>
+        <mat-list>
+          <mat-list-item *ngFor="let item of menuItems">
+            <a mat-button routerLink="{{item.link}}" routerLinkActive="active" ariaCurrentWhenActive="page">
+              <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
+              {{ item.label }}
+            </a>
+          </mat-list-item>
+        </mat-list>
 
-    <mat-list>
-      <mat-list-item *ngFor="let item of menuItems">
-        <a mat-button routerLink="{{item.link}}" routerLinkActive="active" ariaCurrentWhenActive="page">
-          <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
-          {{ item.label }}
-        </a>
-      </mat-list-item>
-    </mat-list>
+      </mat-sidenav>
 
-  </mat-sidenav>
+      <mat-sidenav-content>
+        <router-outlet/>
+      </mat-sidenav-content>
 
-  <mat-sidenav-content>
-    <router-outlet/>
-  </mat-sidenav-content>
+    </mat-sidenav-container>
 
-</mat-sidenav-container>
+  } @else {
+    <div>
+      <div>
+        <router-outlet/>
+      </div>
+      <app-mobile-menu/>
+    </div>
+  }
+
+</div>
