--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-<div class="main-container">
-
   @if (!isMobile()) {
-    <mat-sidenav-container>
+    <mat-sidenav-container class="main-container">
       <mat-sidenav mode="side" opened>
         <mat-toolbar>
           <span>Menu</span>
@@ -42,5 +40,3 @@
       <app-mobile-menu/>
     </div>
   }
-
-</div>
