add forfeit button

--- a/src/app/pages/page-games/level-end/level-end.component.html
+++ b/src/app/pages/page-games/level-end/level-end.component.html
@@ -3,4 +3,5 @@
   <input matInput placeholder="-3 or 3" #answerInput>
 </mat-form-field>
 
-<button mat-button (click)="answer(answerInput.value)">Envoyer</button>
+<button mat-button (click)="answer(answerInput.value, false)">Envoyer</button>
+<button mat-button (click)="answer(answerInput.value, true)">Forfait</button>
