--- a/src/app/components/menu/mobile-menu/mobile-menu.component.html
+++ b/src/app/components/menu/mobile-menu/mobile-menu.component.html
@@ -7,15 +7,12 @@
         <mat-icon matListItemIcon [matTooltip]="item.label">{{ item.icon }}</mat-icon>
       </a>
     </mat-list-item>
-
-    <button mat-button *ngIf="true" title="Déconnexion">
-      <mat-icon [matTooltip]="'Deconnexion'">logout</mat-icon>
-    </button>
+    <mat-list-item *ngIf="!connected()">
+      <button mat-button (click)="login()">
+        <mat-icon matListItemIcon>login</mat-icon>
+      </button>
+    </mat-list-item>
 
   </mat-list>
 
-  <!--  <button mat-button *ngIf="!connected()" title="Connexion Google" (click)="login()">-->
-  <!--    <mat-icon>login</mat-icon>-->
-  <!--    Connexion-->
-  <!--  </button>-->
 </div>
