--- a/src/app/pages/page-games/level-start/level-start.component.html
+++ b/src/app/pages/page-games/level-start/level-start.component.html
@@ -1,3 +1,8 @@
+<mat-progress-spinner mode="determinate" [value]="progress$ | async"></mat-progress-spinner>
+
 <div>
   {{ this.currentNumber() }}
+  {{ this.currentNumber$ | async }}
 </div>
+
+<div>{{level | json}}</div>
