--- a/src/app/pages/page-games/level-start/level-start.component.html
+++ b/src/app/pages/page-games/level-start/level-start.component.html
@@ -1,3 +1,5 @@
-<div>
-  {{ this.currentNumber() }}
+<mat-progress-spinner mode="determinate" [value]="progress$ | async" diameter="40"></mat-progress-spinner>
+
+<div class="number">
+  {{ this.currentNumber$ | async }}
 </div>
